Fix: Offer banner scroll, navbar overlap issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,8 @@ body {
   height: 100%;
   width: 100%;
   background-color: #0e0d0d;
-  /* background-color: #101218; */
   color: white;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
